fixing top spacing

--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ header {
      display: flex;
      margin-right: auto;
      position: fixed;
-     top: 30%;
+     top: 50%;
      left: 10%;
    }
 }
